--- a/wp-content/uploads/custom-css-js/1390.css
+++ b/wp-content/uploads/custom-css-js/1390.css
@@ -1,4 +1,10 @@
 <!-- start Simple Custom CSS and JS -->
 <style type="text/css">
-</style>
+html, body {
+    overflow-x:hidden;
+    width:100%;
+   /* You may also want to try adding:*/
+    margin: 0;
+    padding: 0;
+}</style>
 <!-- end Simple Custom CSS and JS -->
